@@ -248,3 +248,15 @@ internal fun getRemapperByTransformers(classTransformers: List<ClassVisitor>): R
         classTransformers.any { it is ManagedStrategyTransformer } -> JavaUtilRemapper()
         else -> null
     }
+
+fun wrapInvalidAccessFromUnnamedModuleExceptionWithDescription(e: Throwable): Throwable {
+    if (e.message?.contains("to unnamed module") ?: false) {
+        return RuntimeException(ADD_OPENS_MESSAGE, e)
+    }
+    return e
+}
+
+private val ADD_OPENS_MESSAGE = "It seems that you use Java 9+ and the code uses Unsafe or similar constructions that are not accessible from unnamed modules.\n" +
+    "Please add the following lines to your test running configuration:\n" +
+    "--add-opens java.base/jdk.internal.misc=ALL-UNNAMED\n" +
+    "--add-exports java.base/jdk.internal.util=ALL-UNNAMED"
